Added model binder for product variant query strings

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrderDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrderDetails.cshtml
@@ -101,7 +101,7 @@
 		    <div class="clear"></div>
 
             <div id="ProductAddAttributeContainer">
-                @{ Html.RenderPartial("_ProductAddAttributes", Model.ProductVariantAttributes); }
+                @{ Html.RenderPartial("_ProductAddAttributes", Model); }
             </div>
 
             <div class="clear"></div>
