--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateAttributeCombinationPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateAttributeCombinationPopup.cshtml
@@ -13,7 +13,7 @@
     else
     {
 		<div id="ProductVariantAttributeContainer">
-			@{ Html.RenderPartial("_ProductAttributes", Model.ProductVariantAttributes); }
+			@{ Html.RenderPartial("_ProductAttributes", Model); }
 		</div>
 	}
 </div>
@@ -57,7 +57,7 @@
 					{
 						<li class="choice-box">
 							<label class="choice-box-label">
-								<input type="checkbox" class="choice-box-control-native" id="product_attribute_2990_0_10_403_1402" name="AssignedPictureIds" value="@x.Id" @Html.Attr("checked", "checked", x.IsAssigned)>
+								<input type="checkbox" class="choice-box-control-native" name="AssignedPictureIds" value="@x.Id" @Html.Attr("checked", "checked", x.IsAssigned)>
 								<span class="choice-box-content">
 									<span class="choice-box-element">
 										<img class="choice-box-img" src="@x.PictureUrl" alt="">
