--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_ProductAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_ProductAttributes.cshtml
@@ -1,13 +1,13 @@
-﻿@model IList<ProductVariantAttributeCombinationModel.ProductVariantAttributeModel>
-@using SmartStore.Web.Framework;
+﻿@using SmartStore.Web.Framework;
 @using SmartStore.Core.Domain.Catalog;
+@model ProductVariantAttributeCombinationModel
 
-@if (Model.Count > 0)
+@if (Model.ProductVariantAttributes.Count > 0)
 {
 <div class="attributes clearfix form-horizontal">
-	@foreach (var attribute in Model)
-    {
-    string controlId = string.Format("product_attribute_{0}_{1}", attribute.ProductAttributeId, attribute.Id);
+	@foreach (var attribute in Model.ProductVariantAttributes)
+	{
+		var controlId = attribute.GetControlId(Model.ProductId, 0);
 	<div class="control-group">
 		<label class="control-label" for="@controlId">
 			@if (attribute.IsRequired)
@@ -67,7 +67,7 @@
 	}
 	else if (attribute.AttributeControlType == AttributeControlType.Datepicker)
     {
-		@Html.DatePickerDropDowns(controlId + "_day", controlId + "_month", controlId + "_year", DateTime.Now.Year, DateTime.Now.Year + 1)
+		@Html.DatePickerDropDowns(controlId + "-day", controlId + "-month", controlId + "-year", DateTime.Now.Year, DateTime.Now.Year + 1)
 	}
 	else if (attribute.AttributeControlType == AttributeControlType.FileUpload)
     {
